--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -9,6 +9,14 @@ spring:
       host: localhost
       port: 27017
       authentication-database: admin
+  servlet:
+    multipart:
+      max-request-size: 10MB
+      max-file-size: 10MB
 
 server:
   port: 8080
+
+logging:
+  level:
+    root: info
