--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.portfolio</groupId>
 	<artifactId>awesome-pizza-be</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>awesome-pizza-be</name>
 	<description>Spring Boot Back-end Service for Awesome Pizza</description>
 	<properties>
