--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -20,3 +20,8 @@ server:
 logging:
   level:
     root: info
+
+appinfo:
+  start: "19:00"
+  end: "23:30"
+  reason-message: "It was not possible to evade this order, Awesome Pizza is now closed."
