--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,9 +13,15 @@ spring:
     multipart:
       max-request-size: 10MB
       max-file-size: 10MB
+
 server:
   port: 8080
 
 logging:
   level:
     root: info
+
+appinfo:
+  start: "19:00"
+  end: "23:30"
+  reason-message: "It was not possible to evade this order, Awesome Pizza is now closed."
